# FileAwayFlow

./: Cargo.toml  LICENSE  README.md
qbittorrent_script/: fileaway.py
sabnzbd_script/: fileaway.py
src/: handler.rs  lib.rs  main.rs  model.rs  routes.rs
tests/: integration_tests.rs
