[package]
name = "file_away_flow"
version = "1.1.0"
edition = "2021"

[dependencies]
pretty_env_logger = "0.5.0"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.45.0", features = ["full"] }
warp = "0.3.7"
lazy_static = "1.5.0"

[dev-dependencies]
tempfile = "3.19.1"
serde_json = "1.0.140"

[lib]
name = "file_away_flow"
path = "src/lib.rs"